fixed tooltip carat position not centered if change the tooltip width

--- a/src/css/view/tooltip.scss
+++ b/src/css/view/tooltip.scss
@@ -78,13 +78,13 @@
 /*--- Top ---*/
 .eael-tooltip .eael-tooltip-text.eael-tooltip-top {
 	bottom: calc(100%);
-	left: 0;
-	right: 0;
+	left: 50%;
+	transform: translateX(-50%);
 	margin: 0 auto 10px auto;
 }
 
 .eael-tooltip .eael-tooltip-text.eael-tooltip-top::after {
-	margin-top: 0px;
+	margin-top: 0;
 	top: 100%;
 	left: calc( 50% - 5px);
 	border-color: black transparent transparent transparent;
